# magic-inspector

./: .eslintrc.cjs  .gitignore  generate-icon.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/detection/: ai_services.rs  blacklist.rs  dns.rs  http.rs  ip.rs  ipv6.rs  mod.rs  proxy.rs  streaming.rs
src/components/: Navbar.tsx  ScoreRing.tsx  StatusBadge.tsx
src/detection/: bridge.ts  progress-types.ts  scoring.ts  webrtc.ts
src/hooks/: useCountUp.ts  useDetection.ts
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: DetailPage.tsx  DetectingPage.tsx  HomePage.tsx  ReportPage.tsx  SettingsPage.tsx
src/settings/: SettingsContext.tsx  useSettings.ts
src/styles/: global.css
src/theme/: tokens.css
src/types/: report.ts
